--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 .DS_Store
+./simplifiedSequencingCalculator/ReleaseVersion
+./PrimaryPipelineSetup/Presentation2.pptx
+./PrimaryPipelineSetup/RhapsodyPipelineDraftV1.html
