update color matching cornerstone

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 simplifiedSequencingCalculator/ReleaseVersion
 PrimaryPipelineSetup/Presentation2.pptx
 PrimaryPipelineSetup/RhapsodyPipelineDraftV1.html
+PrimaryPipelineSetup/pipeline_inputs_template.yml
+PrimaryPipelineSetup/pictures/snippets.yml
