Setup Github Pages Deployment

--- a/Home/.github/workflows/deploy.yml
+++ b/Home/.github/workflows/deploy.yml
@@ -24,12 +24,14 @@ jobs:
         
         - name: Install dependencies
         run: npm install
+        working-directory: Home
         
         - name: Build app
         run: npm run build
-        
+        working-directory: Home
+
         - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
             github_token: ${{ secrets.GITHUB_TOKEN }}
-            publish_dir: ./dist  # use ./build for CRA
+            publish_dir: Home/dist  # use Home/build for CRA
