--- a/Home/.github/workflows/deploy.yml
+++ b/Home/.github/workflows/deploy.yml
@@ -26,6 +26,10 @@ jobs:
         run: npm install
         working-directory: Home
         
+        - name: Clean dist folder
+        run: rm -rf dist
+        working-directory: Home
+        
         - name: Build app
         run: npm run build
         working-directory: Home
