Setup Github Pages Deployment

--- a/Home/package.json
+++ b/Home/package.json
@@ -1,5 +1,5 @@
-"homepage": "https://syabirayusoff.github.io/Home"
 {
+  "homepage": "https://syabirayusoff.github.io/Home",
   "name": "tools-page",
   "private": true,
   "version": "0.0.0",
