--- a/Home/package.json
+++ b/Home/package.json
@@ -8,7 +8,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "framer-motion": "^12.19.2",
@@ -30,9 +32,5 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "vite": "^6.3.5"
-  }, 
-  "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
-  },
+  }
 }
