Setup Github Pages Deployment

--- a/Home/package.json
+++ b/Home/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://syabirayusoff.github.io/Home",
-  "name": "tools-page",
+  "name": "Home",
   "private": true,
   "version": "0.0.0",
   "type": "module",
